# chip-8

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: call_stack.rs  instruction.rs  main.rs
src/machine/: call_stack.rs  execute.rs  instruction.rs  keypad.rs  memory.rs  mod.rs  screen.rs
